fix: исправить цвета в DarkMode

--- a/Tracker/Resources/Info.plist
+++ b/Tracker/Resources/Info.plist
@@ -7,7 +7,7 @@
 		<key>UIImageName</key>
 		<string>launch_Icon</string>
 		<key>UIColorName</key>
-		<string>BlueYP</string>
+		<string>BlueStatic</string>
 	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
